--- a/TABLE/CAITAN TABLE.html
+++ b/TABLE/CAITAN TABLE.html
@@ -82,7 +82,7 @@
         <td>1000</td>
         <td rowspan="8" class="supplier-cell"><div class="supplier">KSK</div></td>  
         <td rowspan="2"><div class="centered-text">5/14/2019</div></td> 
-        <td rowspan="8"><img src="file:///C:/Users/liezl/OneDrive/Documents/CAITAN%20SA1/RaphaelusEthaneus.github.io/image/boy%20bawang.jpg" alt="Boy Bawang" 
+        <td rowspan="8"><img src="https://m.media-amazon.com/images/I/61FElltZAnL._AC_UF894,1000_QL80_DpWeblab_.jpg" alt="Boy Bawang" 
             width="200px"></td>
     </tr>
     <tr>
