--- a/FA3/index.html
+++ b/FA3/index.html
@@ -1,35 +1,66 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <link rel="stylesheet" type="text/css" href="external_registration.css">
-
     <title>Employee Registration Form</title>
 </head>
 <body>
     <div class="form-container">
-        <h1>Registration Form</h1>
+        <h1 class="form-header">Registration Form</h1>
+        <div class="header-line"></div>
         <form action="">
+            <h2 class="subheader">Personal Information</h2>
             <div class="form-control">
-                <label for="lastname">Last Name</label>
+                <label for="lastname">Last Name:</label>
                 <input type="text" id="lastname" name="lastname" placeholder="Last Name">
             </div>
             <div class="form-control">
-                <label for="firstname">First Name</label>
+                <label for="firstname">First Name:</label>
                 <input type="text" id="firstname"  name="firstname" placeholder="First Name">
             </div>
             <div class="form-control">
-                <label for="middlename">Middle Name</label>
+                <label for="middlename">Middle Name:</label>
                 <input type="text" id="middlename"  name="middlename" placeholder="Middle Name">
             </div>
+            <div class="form-control">
+                <label for="email">Email:</label>
+                <input type="text" id="email"  name="email" placeholder="Email">
+            </div>
+            <div class="form-control">
+                <label for="contact number">Contact Number:</label>
+                <input type="text" id="contact number"  name="contact number" placeholder="Contact Number">
+                <div class="header-line"></div>
+            </div>
+    
+            <!-- New fields -->
+            <div class="form-section">
+                <h2 class="subheader">Additional Information</h2>
+                <div class="form-control input-group">
+                    <label for="dob">Date of Birth:</label>
+                    <input type="date" id="dob" name="dob">
+                </div>
+                <div class="form-control input-group">
+                    <label for="gender">Gender:</label>
+                    <select id="gender" name="gender">
+                        <option value="male">Male</option>
+                        <option value="female">Female</option>
+                        <option value="other">Other</option>
+                    </select>
+                </div>
+                <div class="form-control input-group">
+                    <label for="address">Address:</label>
+                    <input type="text" id="address" name="address" placeholder="Address">
+                </div>
+            </div>
+            
+            <!-- Button section -->
             <div class="buttons">
-                <button type="submit">Register</button>
-                <button type="button">Cancel</button>
+                <div class="button-container">
+                    <button type="submit">Register</button>
+                    <button type="button">Cancel</button>
+                </div>
             </div>
         </form>
     </div>
-</body>
-</html>
