--- a/SA2/RESUME.html
+++ b/SA2/RESUME.html
@@ -4,173 +4,97 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resume</title>
-    <style>
-        body {
-            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            background-color: #f4f4f4;
-        }
-        .container {
-            max-width: 750px;
-            margin: 50px auto;
-            padding: 20px;
-            border: 1px solid #000000;
-            border-radius: 5px;
-            background-color: #fff;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        .profile {
-            text-align: center;
-            margin-bottom: 20px;
-        }
-        .profile img {
-            width: 180px;
-            height: 180px;
-            border-radius: 10px;
-            object-fit: cover;
-        }
-        .contact {
-            text-align: center;
-        }
-        .contact p {
-            margin: 5px 0;
-        }
-        .about-me {
-            text-align: justify;
-            margin-top: 20px;
-        }
-        .section {
-            margin-bottom: 20px;
-            padding: 15px;
-            border-radius: 5px;
-            background-color: #ececec;
-        }
-        .section h2 {
-            margin-bottom: 10px;
-        }
-        .skills ul, .education ul {
-            list-style-type: none;
-            padding: 0;
-            margin: 0;
-        }
-        .skills li, .education p {
-            margin-bottom: 5px;
-        }
-
-        .skills {
-            width: 100%;
-            border-collapse: collapse;
-        }
-
-        .skills th, .skills td {
-            border: 1px solid #ddd;
-            padding: 8px;
-            text-align: left;
-        }
-
-        .skills th {
-            background-color: #f2f2f2;
-        }
-
-        .skills tr:nth-child(even) {
-            background-color: #f2f2f2;
-        }
-
-        .skills tr:hover {
-            background-color: #ddd;
-        }
-
-        /* Styles for Works & Social Media section */
-        .works, .social-media {
-            margin-top: 20px;
-        }
-        .works ul, .social-media ul {
-            list-style-type: none;
-            padding: 0;
-            margin: 0;
-        }
-        .works li, .social-media li {
-            margin-bottom: 5px;
-        }
-        .social-media img {
-            width: 30px;
-            height: auto;
-            margin-right: 10px;
-            vertical-align: middle;
-        }
-    </style>
+    <!-- Bootstrap CSS -->
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <div class="container">
-        <div class="profile">
-            <img src="file:///C:/Users/liezl/OneDrive/Pictures/Camera%20Roll/441289609_1143840030092316_8876032299524077976_n.jpg" alt="Your Name">
-            <h1>Justin Amiel K. Caitan</h1>
-        </div>
-        <div class="contact">
-            <p><strong>Address:</strong> 137 Fortuna Street, Zone 2 Barangay 20, Pasay City</p>
-            <p><strong>Email:</strong> 202312428@fit.edu.ph</p>
-            <p><strong>Phone:</strong> 09202717703</p>
-        </div>
-        <div class="about-me">
-            <div class="section">
-                <h2>About Me</h2>
-                <p>My name is Justin Caitan, and I am currently studying Information Technology with a Specialization on Cybersecurity at FEU Institute of Technology. I am still and learning and developing some languages such as C++ , HTML and others. I am good at researching, listening, and working with my team. I am curious about technology and always try to learn more about it. I want to use my skills in real-life situations to help in the field of cybersecurity.</p>
-            </div>            
-            <div class="section">
-                <h2>Skills</h2>
-                <table class="skills">
-                    <tr>
-                        <td>HTML</td>
-                        <td>Communication Skills</td>
-                    </tr>
-                    <tr>
-                        <td>CSS</td>
-                        <td>Research Skills</td>
-                    </tr>
-                    <tr>
-                        <td>JavaScript</td>
-                        <td>Active Listening</td>
-                    </tr>
-                    <tr>
-                        <td>Python</td>
-                        <td>Teamwork</td>
-                    </tr>
-                    <tr>
-                        <td>C++</td>
-                        <td>Flexibility</td>
-                    </tr>
-                </table>
+    <div class="container mt-5">
+        <div class="bg-white p-4 rounded shadow-sm">
+            <div class="text-center mb-4">
+                <img src="file:///C:/Users/liezl/OneDrive/Pictures/Camera%20Roll/441289609_1143840030092316_8876032299524077976_n.jpg" alt="Your Name" class="rounded" style="width: 180px; height: 180px; object-fit: cover;">
+                <h1 class="mt-3">Justin Amiel K. Caitan</h1>
             </div>
-                
-            <div class="section">
-                <h2>Education</h2>
-                <p>Young Achievers International School [2023]</p>
-                <p>BSIT Specialized In Cybersecurity - FEU Institute of Technology [2026]</p>
+            <div class="text-center mb-4">
+                <p><strong>Address:</strong> 137 Fortuna Street, Zone 2 Barangay 20, Pasay City</p>
+                <p><strong>Email:</strong> 202312428@fit.edu.ph</p>
+                <p><strong>Phone:</strong> 09202717703</p>
             </div>
-
-            <!-- Works & Social Media Section -->
-            <div class="section">
-                <h2>Works & Social Media</h2>
-                <div class="works">
-                    <ul>
-                        <li><a href="https://raphaelusethaneus.github.io/TABLE/CAITAN%20TABLE.html">INVENTORY SYSTEM</a></li>
-                        <li><a href="https://raphaelusethaneus.github.io/FA3/index.html">REGISTRATION FORM</a></li>
-                        <li><a href="https://raphaelusethaneus.github.io/BASIC%20WEB%20FORM/CAITAN%20BASIC%20WEB%20FORM.html">BASIC WEB FORM</a></li>
-                    </ul>
-                </div>
-                <div class="social-media">
-                    <h3>Connect with Me</h3>
-                    <ul>
-                        <li><a href="https://www.facebook.com/tin.caitan9211/" target="_blank"><img src="https://freepnglogo.com/images/all_img/1713419166FB_Logo_PNG.png" alt="Facebook"></a></li>
-                        <li><a href="https://www.instagram.com/bootinnnn/" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/2048px-Instagram_icon.png" alt="Instagram"></a></li>
-                        <!-- Add more social media links here -->
-                    </ul>
+            <div class="mb-4">
+                <div class="bg-light p-3 rounded">
+                    <h2>About Me</h2>
+                    <p>My name is Justin Caitan, and I am currently studying Information Technology with a Specialization on Cybersecurity at FEU Institute of Technology. I am still learning and developing some languages such as C++, HTML, and others. I am good at researching, listening, and working with my team. I am curious about technology and always try to learn more about it. I want to use my skills in real-life situations to help in the field of cybersecurity.</p>
+                </div>            
+            </div>
+            <div class="mb-4">
+                <div class="bg-light p-3 rounded">
+                    <h2>Skills</h2>
+                    <div class="table-responsive">
+                        <table class="table table-bordered">
+                            <thead>
+                                <tr>
+                                    <th>Technical Skills</th>
+                                    <th>Soft Skills</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>HTML</td>
+                                    <td>Communication Skills</td>
+                                </tr>
+                                <tr>
+                                    <td>CSS</td>
+                                    <td>Research Skills</td>
+                                </tr>
+                                <tr>
+                                    <td>JavaScript</td>
+                                    <td>Active Listening</td>
+                                </tr>
+                                <tr>
+                                    <td>Python</td>
+                                    <td>Teamwork</td>
+                                </tr>
+                                <tr>
+                                    <td>C++</td>
+                                    <td>Flexibility</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
             </div>
-            <!-- End of Works & Social Media Section -->
+            <div class="mb-4">
+                <div class="bg-light p-3 rounded">
+                    <h2>Education</h2>
+                    <p>Young Achievers International School [2023]</p>
+                    <p>BSIT Specialized In Cybersecurity - FEU Institute of Technology [2026]</p>
+                </div>
+            </div>
+            <div class="mb-4">
+                <div class="bg-light p-3 rounded">
+                    <h2>Works & Social Media</h2>
+                    <div class="mb-3">
+                        <h3>Works</h3>
+                        <ul class="list-unstyled">
+                            <li><a href="https://raphaelusethaneus.github.io/TABLE/CAITAN%20TABLE.html">INVENTORY SYSTEM</a></li>
+                            <li><a href="https://raphaelusethaneus.github.io/FA3/index.html">REGISTRATION FORM</a></li>
+                            <li><a href="https://raphaelusethaneus.github.io/BASIC%20WEB%20FORM/CAITAN%20BASIC%20WEB%20FORM.html">BASIC WEB FORM</a></li>
+                        </ul>
+                    </div>
+                    <div>
+                        <h3>Connect with Me</h3>
+                        <ul class="list-inline">
+                            <li class="list-inline-item"><a href="https://www.facebook.com/tin.caitan9211/" target="_blank"><img src="https://freepnglogo.com/images/all_img/1713419166FB_Logo_PNG.png" alt="Facebook" style="width: 30px; height: auto;"></a></li>
+                            <li class="list-inline-item"><a href="https://www.instagram.com/bootinnnn/" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/2048px-Instagram_icon.png" alt="Instagram" style="width: 30px; height: auto;"></a></li>
+                            <!-- Add more social media links here -->
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
+    <!-- Bootstrap JS and dependencies -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
