--- a/SA2/RESUME.html
+++ b/SA2/RESUME.html
@@ -4,14 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resume</title>
-    <!-- Bootstrap CSS -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
     <div class="container mt-5">
         <div class="bg-white p-4 rounded shadow-sm">
             <div class="text-center mb-4">
-                <img src="file:///C:/Users/liezl/OneDrive/Pictures/Camera%20Roll/441289609_1143840030092316_8876032299524077976_n.jpg" alt="Your Name" class="rounded" style="width: 180px; height: 180px; object-fit: cover;">
+                <img src="https://drive.google.com/file/d/1Kld8Y-f5iELH3v8WWzI2W1RT_3H68bzL/view?usp=drive_link" alt="Your Name" class="rounded" style="width: 180px; height: 180px; object-fit: cover;">
                 <h1 class="mt-3">Justin Amiel K. Caitan</h1>
             </div>
             <div class="text-center mb-4">
@@ -85,14 +84,12 @@
                         <ul class="list-inline">
                             <li class="list-inline-item"><a href="https://www.facebook.com/tin.caitan9211/" target="_blank"><img src="https://freepnglogo.com/images/all_img/1713419166FB_Logo_PNG.png" alt="Facebook" style="width: 30px; height: auto;"></a></li>
                             <li class="list-inline-item"><a href="https://www.instagram.com/bootinnnn/" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/2048px-Instagram_icon.png" alt="Instagram" style="width: 30px; height: auto;"></a></li>
-                            <!-- Add more social media links here -->
                         </ul>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <!-- Bootstrap JS and dependencies -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
