--- a/SA2/RESUME.html
+++ b/SA2/RESUME.html
@@ -10,7 +10,7 @@
     <div class="container mt-5">
         <div class="bg-white p-4 rounded shadow-sm">
             <div class="text-center mb-4">
-                <img src="https://drive.google.com/file/d/1Kld8Y-f5iELH3v8WWzI2W1RT_3H68bzL/view?usp=drive_link" alt="Your Name" class="rounded" style="width: 180px; height: 180px; object-fit: cover;">
+                <img src="https://drive.google.com/uc?export=view&id=1Kld8Y-f5iELH3v8WWzI2W1RT_3H68bzL" alt="Your Name" class="rounded" style="width: 180px; height: 180px; object-fit: cover;">
                 <h1 class="mt-3">Justin Amiel K. Caitan</h1>
             </div>
             <div class="text-center mb-4">
