--- a/SA2/RESUME.html
+++ b/SA2/RESUME.html
@@ -95,3 +95,100 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Resume</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+</head>
+<body>
+    <div class="container mt-5">
+        <div class="bg-white p-4 rounded shadow-sm">
+            <div class="text-center mb-4">
+                <img src="https://drive.google.com/uc?export=view&id=1Kld8Y-f5iELH3v8WWzI2W1RT_3H68bzL" alt="Your Name" class="rounded" style="width: 180px; height: 180px; object-fit: cover;">
+                <h1 class="mt-3">Justin Amiel K. Caitan</h1>
+            </div>
+            <div class="text-center mb-4">
+                <p><strong>Address:</strong> 137 Fortuna Street, Zone 2 Barangay 20, Pasay City</p>
+                <p><strong>Email:</strong> 202312428@fit.edu.ph</p>
+                <p><strong>Phone:</strong> 09202717703</p>
+            </div>
+            <div class="mb-4">
+                <div class="bg-light p-3 rounded">
+                    <h2>About Me</h2>
+                    <p>My name is Justin Caitan, and I am currently studying Information Technology with a Specialization on Cybersecurity at FEU Institute of Technology. I am still learning and developing some languages such as C++, HTML, and others. I am good at researching, listening, and working with my team. I am curious about technology and always try to learn more about it. I want to use my skills in real-life situations to help in the field of cybersecurity.</p>
+                </div>            
+            </div>
+            <div class="mb-4">
+                <div class="bg-light p-3 rounded">
+                    <h2>Skills</h2>
+                    <div class="table-responsive">
+                        <table class="table table-bordered">
+                            <thead>
+                                <tr>
+                                    <th>Technical Skills</th>
+                                    <th>Soft Skills</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>HTML</td>
+                                    <td>Communication Skills</td>
+                                </tr>
+                                <tr>
+                                    <td>CSS</td>
+                                    <td>Research Skills</td>
+                                </tr>
+                                <tr>
+                                    <td>JavaScript</td>
+                                    <td>Active Listening</td>
+                                </tr>
+                                <tr>
+                                    <td>Python</td>
+                                    <td>Teamwork</td>
+                                </tr>
+                                <tr>
+                                    <td>C++</td>
+                                    <td>Flexibility</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+            <div class="mb-4">
+                <div class="bg-light p-3 rounded">
+                    <h2>Education</h2>
+                    <p>Young Achievers International School [2023]</p>
+                    <p>BSIT Specialized In Cybersecurity - FEU Institute of Technology [2026]</p>
+                </div>
+            </div>
+            <div class="mb-4">
+                <div class="bg-light p-3 rounded">
+                    <h2>Works & Social Media</h2>
+                    <div class="mb-3">
+                        <h3>Works</h3>
+                        <ul class="list-unstyled">
+                            <li><a href="https://raphaelusethaneus.github.io/TABLE/CAITAN%20TABLE.html">INVENTORY SYSTEM</a></li>
+                            <li><a href="https://raphaelusethaneus.github.io/FA3/index.html">REGISTRATION FORM</a></li>
+                            <li><a href="https://raphaelusethaneus.github.io/BASIC%20WEB%20FORM/CAITAN%20BASIC%20WEB%20FORM.html">BASIC WEB FORM</a></li>
+                        </ul>
+                    </div>
+                    <div>
+                        <h3>Connect with Me</h3>
+                        <ul class="list-inline">
+                            <li class="list-inline-item"><a href="https://www.facebook.com/tin.caitan9211/" target="_blank"><img src="https://freepnglogo.com/images/all_img/1713419166FB_Logo_PNG.png" alt="Facebook" style="width: 30px; height: auto;"></a></li>
+                            <li class="list-inline-item"><a href="https://www.instagram.com/bootinnnn/" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/2048px-Instagram_icon.png" alt="Instagram" style="width: 30px; height: auto;"></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+</body>
+</html>
