--- a/SA2/RESUME.html
+++ b/SA2/RESUME.html
@@ -10,7 +10,7 @@
     <div class="container mt-5">
         <div class="bg-white p-4 rounded shadow-sm">
             <div class="text-center mb-4">
-                <img src="C:\Users\liezl\OneDrive\Pictures\Camera Roll\441289609_1143840030092316_8876032299524077976_n.jpg" alt="Your Name" class="rounded" style="width: 180px; height: 180px; object-fit: cover;">
+                <img src="tin.jpg" alt="Your Name" class="rounded" style="width: 180px; height: 180px; object-fit: cover;">
                 <h1 class="mt-3">Justin Amiel K. Caitan</h1>
             </div>
             <div class="text-center mb-4">
