--- a/CaitanJustin/index.html
+++ b/CaitanJustin/index.html
@@ -90,19 +90,19 @@
         <div class="friend">
             <img src="assets/jok.jpg" alt="Jok">
             <h2>This guy?</h2>
-            <a href="infographic_friend1.html">Click here</a>
+            <a href="https://raphaelusethaneus.github.io/CaitanJustin/jok_inline.html">Click here</a>
         </div>
 
         <div class="friend">
             <img src="assets/tin.jpg" alt="Tin">
             <h2>Or this guy?</h2>
-            <a href="infographic_friend2.html">Click here</a>
+            <a href="https://raphaelusethaneus.github.io/CaitanJustin/tin_internal.html">Click here</a>
         </div>
 
         <div class="friend">
             <img src="assets/dwayne.jpg" alt="Dwayne">
             <h2>Or him? </h2>
-            <a href="infographic_friend3.html">Click here</a>
+            <a href="https://raphaelusethaneus.github.io/CaitanJustin/dwayne_external.html">Click here</a>
         </div>
     </div>
 
