--- a/SA3/products.html
+++ b/SA3/products.html
@@ -3,9 +3,174 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>EthanTechLand</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <style>
+
+        body {
+            font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            background-image: url('https://img.freepik.com/free-vector/abstract-blue-light-pipe-speed-zoom-black-background-technology_1142-8633.jpg'); 
+            color: #fff;
+            padding: 20px 0;
+            position: relative;
+        
+        }
+        .header-top {
+            display: flex;
+            justify-content: space-between;
+            align-items: center; 
+            padding: 0 20px;
+        }
+        .company-name {
+            font-size: 24px;
+        }
+        nav a {
+            color: #fff;
+            margin: 0 15px;
+            text-decoration: none;
+        }
+        .header-title {
+            text-align: center;
+            padding: 40px 0;
+        }
+        .products {
+            padding: 40px 0; 
+        }
+        .product {
+            border: 1px solid #ddd;
+            padding: 20px;
+            text-align: center;
+            margin-bottom: 20px;
+        }
+        .product img {
+            max-width: 100%;
+            height: auto;
+        }
+        .about-us {
+            padding: 40px 0; 
+            text-align: center; 
+            background: #f4f4f4; 
+        }
+        .contact {
+            padding: 20px;
+            background: #f4f4f4;
+            text-align: center;
+        }
+        .contact-form {
+            max-width: 600px;
+            margin: auto;
+        }
+        .contact-form label {
+            display: block;
+            margin-bottom: 10px;
+        }
+        .contact-form input, .contact-form textarea {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 20px;
+        }
+        .contact-form button {
+            padding: 10px 20px;
+            background: #333;
+            color: #fff;
+            border: none;
+        }
+    </style>
+    <script>
+        function validateForm() {
+            let name = document.forms["contactForm"]["name"].value;
+            let email = document.forms["contactForm"]["email"].value;
+            let message = document.forms["contactForm"]["message"].value;
+            if (name == "" || email == "" || message == "") {
+                alert("All fields must be filled out");
+                return false;
+            }
+            let emailPattern = /^[^ ]+@[^ ]+\.[a-z]{2,3}$/;
+            if (!email.match(emailPattern)) {
+                alert("Please enter a valid email address");
+                return false;
+            }
+            return true;
+        }
+    </script>
 </head>
 <body>
-    
+    <header>
+        <div class="header-top">
+            <div class="company-name">EthanTechLand</div>
+            <nav>
+                <a href="#">Home</a>
+                <a href="#products">Products</a>
+                <a href="#about">About</a>
+                <a href="#contact">Contact</a>
+            </nav>
+        </div>
+        <div class="header-title">
+            <h1>Game with no limits</h1>
+        </div>
+    </header>
+    <div class="container">
+        <section class="products" id="products">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="product">
+                        <h2>Lenovo Legion 5i (2024)</h2>
+                        <img src="https://p4-ofp.static.pub//fes/cms/2024/02/14/xxsboyu2kodhy5m4oq2714d0tpd8r2514433.png" alt="Product 1 Image">
+                        <p>Intel® Core™ i9-14900HX</p>
+                        <p>NVIDIA® GeForce RTX™ 4070 Laptop GPU 8GB GDDR6 (140W) </p>
+                        <p>16" 240Hz</p>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="product">
+                        <h2>Predator Helios Neo 16</h2>
+                        <img src="https://images.acer.com/is/image/acer/predator-helios-neo-16-phn16-72-4zone-backlit-on-wallpaper-black-01-1?$Series-Component-M1-M2-S$" alt="Product 2 Image">
+                        <p>Intel® Core™ i9-14900HX</p>
+                        <p>NVIDIA® GeForce RTX™ 4060 Up to 140 W</p>
+                        <p>16" 165Hz</p>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="product">
+                        <h2>Asus ROG Strix G16 (2024)</h2>
+                        <img src="https://dlcdnwebimgs.asus.com/gain/C0280928-8FA3-4166-8F3F-FDEB3FBF0CDF" alt="Product 3 Image">
+                        <p>Intel® Core™ i9-14900HX</p>
+                        <p>NVIDIA® GeForce RTX™ 4080 Up to 140 W</p>
+                        <p>16" 240Hz</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="about-us" id="about">
+            <h2>About Us</h2>
+            <p>We are dedicated to deliver high-quality gaming laptops for our gamers around the world!</p>
+        </section>
+        <section class="contact" id="contact">
+            <h2>Contact Us</h2>
+            <form name="contactForm" class="contact-form" onsubmit="return validateForm()">
+                <div class="form-group">
+                    <label for="name">Name</label>
+                    <input type="text" id="name" name="name" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label for="email">Email</label>
+                    <input type="email" id="email" name="email" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label for="message">Message</label>
+                    <textarea id="message" name="message" rows="5" class="form-control"></textarea>
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
+        </section>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@1.16.1/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
