--- a/SA3/products.html
+++ b/SA3/products.html
@@ -8,7 +8,7 @@
     <style>
 
         body {
-            font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+            font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
             margin: 0;
             padding: 0;
         }
