--- a/FINALS/product-details.html
+++ b/FINALS/product-details.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokémon GO Fest 2024: Global Ticket</title>
-    <link rel="stylesheet" href="products.css">
     <link rel="stylesheet" href="product-detail.css">
 </head>
 <body>
@@ -16,8 +15,8 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="products.html">Home</a></li>
-                    <li><a href="#">Products</a></li>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="products.html">Products</a></li>
                     <li><a href="#">About Us</a></li>
                     <li><a href="#">Register</a></li>
                     <li><a href="#">Log In</a></li>
@@ -29,9 +28,10 @@
         <div class="product-details-container">
             <img src="images/globalticket.png" alt="Special Offer 1">
             <h3>Pokémon GO Fest 2024: Global Ticket</h3>
-            <p>Ticket and Additional Items!</p>
+            <p> x1 Ticket</p>
+            <p> x1 GO Fest 2024 Tee (Gray)</p>
+            <p> x1 GO Fest 2024 Tee (Gray)</p> 
             <p class="price">₱439.10</p>
-            <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum nec odio ipsum. Phasellus fermentum magna non mauris porttitor, et blandit est finibus.</p>
             <button class="buy-now">Buy Now</button>
             <!-- Include additional details as needed -->
         </div>
