--- a/FINALS/products.html
+++ b/FINALS/products.html
@@ -36,7 +36,7 @@
                         <h3>Pokémon GO Fest 2024: Global Ticket</h3>
                         <p>Ticket and Additional Items!</p>
                         <p class="price">₱439.10</p>
-                        <a href="product1.html" class="more-details">More Details</a>
+                        <a href="product-details.html" class="more-details">More Details</a>
                         <button class="add-to-cart">Buy</button>
                     </div>
                 </div>
