--- a/FINALS/product-details.html
+++ b/FINALS/product-details.html
@@ -26,14 +26,76 @@
     </header>
     <main>
         <div class="product-details-container">
-            <img src="images/globalticket.png" alt="Special Offer 1">
+            <img src="images/globalticket.png" alt="Pokémon GO Fest 2024: Global Ticket">
             <h3>Pokémon GO Fest 2024: Global Ticket</h3>
-            <p> x1 Ticket</p>
-            <p> x1 GO Fest 2024 Tee (Gray)</p>
-            <p> x1 GO Fest 2024 Tee (Gray)</p> 
+            <div class="product-item">
+                <img src="images/x1ticket.webp" alt="Ticket">
+                <p> x1 Ticket</p>
+            </div>
+            <div class="product-item">
+                <img src="images/gotee.webp" alt="GO Fest 2024 Tee (Gray)">
+                <p> x1 GO Fest 2024 Tee (Gray)</p>
+            </div>
+            <div class="product-item">
+                <img src="images/gotee.webp" alt="GO Fest 2024 Tee (Gray)">
+                <p> x1 GO Fest 2024 Tee (Gray)</p>
+            </div>
             <p class="price">₱439.10</p>
             <button class="buy-now">Buy Now</button>
-            <!-- Include additional details as needed -->
+        </div>
+        <div class="product-details-container">
+            <img src="images/globalticket.png" alt="Pokémon GO Fest 2024: Global Ticket">
+            <h3>Pokémon GO Fest 2024: Global Ticket</h3>
+            <div class="product-item">
+                <img src="images/x1ticket.webp" alt="Ticket">
+                <p> x1 Ticket</p>
+            </div>
+            <div class="product-item">
+                <img src="images/gotee.webp" alt="GO Fest 2024 Tee (Gray)">
+                <p> x1 GO Fest 2024 Tee (Gray)</p>
+            </div>
+            <div class="product-item">
+                <img src="images/gotee.webp" alt="GO Fest 2024 Tee (Gray)">
+                <p> x1 GO Fest 2024 Tee (Gray)</p>
+            </div>
+            <p class="price">₱439.10</p>
+            <button class="buy-now">Buy Now</button>
+        </div>
+        <div class="product-details-container">
+            <img src="images/globalticket.png" alt="Pokémon GO Fest 2024: Global Ticket">
+            <h3>Pokémon GO Fest 2024: Global Ticket</h3>
+            <div class="product-item">
+                <img src="images/x1ticket.webp" alt="Ticket">
+                <p> x1 Ticket</p>
+            </div>
+            <div class="product-item">
+                <img src="images/gotee.webp" alt="GO Fest 2024 Tee (Gray)">
+                <p> x1 GO Fest 2024 Tee (Gray)</p>
+            </div>
+            <div class="product-item">
+                <img src="images/gotee.webp" alt="GO Fest 2024 Tee (Gray)">
+                <p> x1 GO Fest 2024 Tee (Gray)</p>
+            </div>
+            <p class="price">₱439.10</p>
+            <button class="buy-now">Buy Now</button>
+        </div>
+        <div class="product-details-container">
+            <img src="images/globalticket.png" alt="Pokémon GO Fest 2024: Global Ticket">
+            <h3>Pokémon GO Fest 2024: Global Ticket</h3>
+            <div class="product-item">
+                <img src="images/x1ticket.webp" alt="Ticket">
+                <p> x1 Ticket</p>
+            </div>
+            <div class="product-item">
+                <img src="images/gotee.webp" alt="GO Fest 2024 Tee (Gray)">
+                <p> x1 GO Fest 2024 Tee (Gray)</p>
+            </div>
+            <div class="product-item">
+                <img src="images/gotee.webp" alt="GO Fest 2024 Tee (Gray)">
+                <p> x1 GO Fest 2024 Tee (Gray)</p>
+            </div>
+            <p class="price">₱439.10</p>
+            <button class="buy-now">Buy Now</button>
         </div>
     </main>
 </body>
