--- a/FINALS/products.html
+++ b/FINALS/products.html
@@ -5,8 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokémon Go Webstore</title>
     <link rel="stylesheet" href="products.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css" />
 </head>
 <body>
     <header>
@@ -61,7 +59,7 @@
                     </div>
                 </div>
                 <div class="product-item">
-                    <img src="images/mysterybox.webp" alt="Special Offer 3">
+                    <img src="images/mysterybox.webp" alt="Special Offer 4">
                     <div class="product-details">
                         <h3>Mystery Boxes</h3>
                         <p>3 Daily Bundles</p>
@@ -70,7 +68,10 @@
                         <button class="add-to-cart">Buy</button>
                     </div>
                 </div>
-                <!-- Add more special offers as needed -->
+            </div>
+            <div class="carousel-nav">
+                <button class="carousel-prev">Previous</button>
+                <button class="carousel-next">Next</button>
             </div>
         </div>
 
@@ -127,12 +128,13 @@
                         <button class="add-to-cart">Buy</button>
                     </div>
                 </div>
-                <!-- Add more Pokecoins products as needed -->
+            </div>
+            <div class="carousel-nav">
+                <button class="carousel-prev">Previous</button>
+                <button class="carousel-next">Next</button>
             </div>
         </div>
     </main>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
     <script src="products.js"></script>
 </body>
 </html>
