--- a/FINALS/product-details.html
+++ b/FINALS/product-details.html
@@ -44,57 +44,44 @@
             <button class="buy-now">Buy Now</button>
         </div>
         <div class="product-details-container">
-            <img src="images/globalticket.png" alt="Pokémon GO Fest 2024: Global Ticket">
-            <h3>Pokémon GO Fest 2024: Global Ticket</h3>
+            <img src="images/ticketbox1.webp" alt="Ticket Box">
+            <h3>Whispers in the Woods Masterwork Research Ticket</h3>
+            <div class="product-item">
+                <img src="images/battlepass.webp" alt="Premium Battle Pass">
+                <p> Premium Battle Pass</p>
+            </div>
             <div class="product-item">
                 <img src="images/x1ticket.webp" alt="Ticket">
                 <p> x1 Ticket</p>
             </div>
-            <div class="product-item">
-                <img src="images/gotee.webp" alt="GO Fest 2024 Tee (Gray)">
-                <p> x1 GO Fest 2024 Tee (Gray)</p>
-            </div>
-            <div class="product-item">
-                <img src="images/gotee.webp" alt="GO Fest 2024 Tee (Gray)">
-                <p> x1 GO Fest 2024 Tee (Gray)</p>
-            </div>
-            <p class="price">₱439.10</p>
+            <p class="price">₱149.00</p>
             <button class="buy-now">Buy Now</button>
         </div>
         <div class="product-details-container">
-            <img src="images/globalticket.png" alt="Pokémon GO Fest 2024: Global Ticket">
-            <h3>Pokémon GO Fest 2024: Global Ticket</h3>
+            <img src="images/annivbox.webp" alt="Anniversary Box">
+            <h3>Anniversary Box</h3>
             <div class="product-item">
-                <img src="images/x1ticket.webp" alt="Ticket">
-                <p> x1 Ticket</p>
+                <img src="images/battlepass.webp" alt="Premium Battle Pass">
+                <p> x3 Premium Battle Pass</p>
             </div>
             <div class="product-item">
-                <img src="images/gotee.webp" alt="GO Fest 2024 Tee (Gray)">
-                <p> x1 GO Fest 2024 Tee (Gray)</p>
+                <img src="images/egginc.webp" alt="Egg Incubator">
+                <p> x1 Egg Incubator</p>
             </div>
             <div class="product-item">
-                <img src="images/gotee.webp" alt="GO Fest 2024 Tee (Gray)">
-                <p> x1 GO Fest 2024 Tee (Gray)</p>
+                <img src="images/raidpass.webp" alt="Remote Raid Pass">
+                <p> x3 Remote Raid Pass</p>
             </div>
-            <p class="price">₱439.10</p>
+            <p class="price">₱149.00</p>
             <button class="buy-now">Buy Now</button>
         </div>
         <div class="product-details-container">
-            <img src="images/globalticket.png" alt="Pokémon GO Fest 2024: Global Ticket">
-            <h3>Pokémon GO Fest 2024: Global Ticket</h3>
+            <img src="images/mysterybox.webp" alt="Mystery Boxes">
+            <h3>Mystery Boxes</h3>
             <div class="product-item">
-                <img src="images/x1ticket.webp" alt="Ticket">
-                <p> x1 Ticket</p>
+                <img src="" alt="">
             </div>
-            <div class="product-item">
-                <img src="images/gotee.webp" alt="GO Fest 2024 Tee (Gray)">
-                <p> x1 GO Fest 2024 Tee (Gray)</p>
-            </div>
-            <div class="product-item">
-                <img src="images/gotee.webp" alt="GO Fest 2024 Tee (Gray)">
-                <p> x1 GO Fest 2024 Tee (Gray)</p>
-            </div>
-            <p class="price">₱439.10</p>
+            <p class="price">₱???</p>
             <button class="buy-now">Buy Now</button>
         </div>
     </main>
