--- a/FINALS/products.html
+++ b/FINALS/products.html
@@ -34,7 +34,7 @@
                         <h3>Pokémon GO Fest 2024: Global Ticket</h3>
                         <p>Ticket and Additional Items!</p>
                         <p class="price">₱439.10</p>
-                        <a href="product-details.html" class="more-details">More Details</a>
+                        <a href="product-details.html#global-ticket" class="more-details">More Details</a>
                         <button class="add-to-cart">Buy</button>
                     </div>
                 </div>
@@ -44,7 +44,7 @@
                         <h3>Whispers in the Woods Masterwork Research Ticket</h3>
                         <p>Limited Time Offer with Additional Items!</p>
                         <p class="price">₱149.00</p>
-                        <button class="more-details">More Details</button>
+                        <a href="product-details.html#masterwork-research" class="more-details">More Details</a>
                         <button class="add-to-cart">Buy</button>
                     </div>
                 </div>
@@ -54,7 +54,7 @@
                         <h3>Anniversary Box</h3>
                         <p>Limited Time Offer with Additional Items!</p>
                         <p class="price">₱149.00</p>
-                        <button class="more-details">More Details</button>
+                        <a href="product-details.html#anniversary-box" class="more-details">More Details</a>
                         <button class="add-to-cart">Buy</button>
                     </div>
                 </div>
@@ -64,7 +64,7 @@
                         <h3>Mystery Boxes</h3>
                         <p>3 Daily Bundles</p>
                         <p class="price">₱???</p>
-                        <button class="more-details">More Details</button>
+                        <a href="product-details.html#mystery-boxes" class="more-details">More Details</a>
                         <button class="add-to-cart">Buy</button>
                     </div>
                 </div>
@@ -79,52 +79,52 @@
             <h2>Need more PokéCoins?</h2>
             <div class="product-carousel pokecoins-carousel">
                 <div class="product-item">
-                    <img src="images/smallcoins.png" alt="Pokecoins">
+                    <img src="images/smallcoins.png" alt="600 PokéCoins">
                     <div class="product-details">
                         <h3>600 PokéCoins</h3>
                         <p>+50 WEB STORE BONUS COINS!</p>
                         <p class="price">₱149.00</p>
-                        <button class="more-details">More Details</button>                        
+                        <a href="product-details.html#600-coins" class="more-details">More Details</a>
                         <button class="add-to-cart">Buy</button>
                     </div>
                 </div>
                 <div class="product-item">
-                    <img src="images/mediumcoins.png" alt="Pokecoins">
+                    <img src="images/mediumcoins.png" alt="1300 PokéCoins">
                     <div class="product-details">
                         <h3>1,300 PokéCoins</h3>
                         <p>+100 WEB STORE BONUS COINS!</p>
                         <p class="price">₱289.00</p>
-                        <button class="more-details">More Details</button>                        
+                        <a href="product-details.html#1300-coins" class="more-details">More Details</a>
                         <button class="add-to-cart">Buy</button>
                     </div>
                 </div>
                 <div class="product-item">
-                    <img src="images/bucketcoins.png" alt="Pokecoins">
+                    <img src="images/bucketcoins.png" alt="2700 PokéCoins">
                     <div class="product-details">
                         <h3>2,700 PokéCoins</h3>
                         <p>+200 WEB STORE BONUS COINS!</p>
                         <p class="price">₱589.00</p>
-                        <button class="more-details">More Details</button>           
+                        <a href="product-details.html#2700-coins" class="more-details">More Details</a>
                         <button class="add-to-cart">Buy</button>
                     </div>
                 </div>
                 <div class="product-item">
-                    <img src="images/largecoins.png" alt="Pokecoins">
+                    <img src="images/largecoins.png" alt="5200 PokéCoins">
                     <div class="product-details">
-                        <h3>2,600 PokéCoins</h3>
+                        <h3>5,200 PokéCoins</h3>
                         <p>+400 WEB STORE BONUS COINS!</p>
                         <p class="price">₱1,170.00</p>
-                        <button class="more-details">More Details</button> 
+                        <a href="product-details.html#5200-coins" class="more-details">More Details</a>
                         <button class="add-to-cart">Buy</button>
                     </div>
                 </div>
                 <div class="product-item">
-                    <img src="images/xlargecoins.webp" alt="Pokecoins">
+                    <img src="images/xlargecoins.webp" alt="15500 PokéCoins">
                     <div class="product-details">
                         <h3>15,500 PokéCoins</h3>
-                        <p>+1000 WEB STORE BONUS COINS!</p>
+                        <p>+1,000 WEB STORE BONUS COINS!</p>
                         <p class="price">₱2,950.00</p>
-                        <button class="more-details">More Details</button>
+                        <a href="product-details.html#15500-coins" class="more-details">More Details</a>
                         <button class="add-to-cart">Buy</button>
                     </div>
                 </div>
