--- a/FINALS/MAIN-PRODUCT-PAGE.html
+++ b/FINALS/MAIN-PRODUCT-PAGE.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokémon Go Webstore</title>
-    <link rel="stylesheet" href="products.css">
+    <link rel="stylesheet" href="MAIN-PRODUCT.css">
 </head>
 <body>
     <header>
@@ -34,7 +34,7 @@
                         <h3>Pokémon GO Fest 2024: Global Ticket</h3>
                         <p>Ticket and Additional Items!</p>
                         <p class="price">₱439.10</p>
-                        <a href="product-details.html#global-ticket" class="more-details">More Details</a>
+                        <a href="product1.html" class="more-details">More Details</a>
                         <button class="add-to-cart">Buy</button>
                     </div>
                 </div>
@@ -44,7 +44,7 @@
                         <h3>Whispers in the Woods Masterwork Research Ticket</h3>
                         <p>Limited Time Offer with Additional Items!</p>
                         <p class="price">₱149.00</p>
-                        <a href="product-details.html#masterwork-research" class="more-details">More Details</a>
+                        <a href="product2.html" class="more-details">More Details</a>
                         <button class="add-to-cart">Buy</button>
                     </div>
                 </div>
@@ -54,7 +54,7 @@
                         <h3>Anniversary Box</h3>
                         <p>Limited Time Offer with Additional Items!</p>
                         <p class="price">₱149.00</p>
-                        <a href="product-details.html#anniversary-box" class="more-details">More Details</a>
+                        <a href="product3.html" class="more-details">More Details</a>
                         <button class="add-to-cart">Buy</button>
                     </div>
                 </div>
@@ -64,7 +64,7 @@
                         <h3>Mystery Boxes</h3>
                         <p>3 Daily Bundles</p>
                         <p class="price">₱???</p>
-                        <a href="product-details.html#mystery-boxes" class="more-details">More Details</a>
+                        <a href="product4.html" class="more-details">More Details</a>
                         <button class="add-to-cart">Buy</button>
                     </div>
                 </div>
@@ -84,7 +84,7 @@
                         <h3>600 PokéCoins</h3>
                         <p>+50 WEB STORE BONUS COINS!</p>
                         <p class="price">₱149.00</p>
-                        <a href="product-details.html#600-coins" class="more-details">More Details</a>
+                        <a href="product5.html" class="more-details">More Details</a>
                         <button class="add-to-cart">Buy</button>
                     </div>
                 </div>
@@ -94,7 +94,7 @@
                         <h3>1,300 PokéCoins</h3>
                         <p>+100 WEB STORE BONUS COINS!</p>
                         <p class="price">₱289.00</p>
-                        <a href="product-details.html#1300-coins" class="more-details">More Details</a>
+                        <a href="product6.html" class="more-details">More Details</a>
                         <button class="add-to-cart">Buy</button>
                     </div>
                 </div>
@@ -104,7 +104,7 @@
                         <h3>2,700 PokéCoins</h3>
                         <p>+200 WEB STORE BONUS COINS!</p>
                         <p class="price">₱589.00</p>
-                        <a href="product-details.html#2700-coins" class="more-details">More Details</a>
+                        <a href="product7.html" class="more-details">More Details</a>
                         <button class="add-to-cart">Buy</button>
                     </div>
                 </div>
@@ -114,7 +114,7 @@
                         <h3>5,200 PokéCoins</h3>
                         <p>+400 WEB STORE BONUS COINS!</p>
                         <p class="price">₱1,170.00</p>
-                        <a href="product-details.html#5200-coins" class="more-details">More Details</a>
+                        <a href="product8.html" class="more-details">More Details</a>
                         <button class="add-to-cart">Buy</button>
                     </div>
                 </div>
@@ -124,7 +124,7 @@
                         <h3>15,500 PokéCoins</h3>
                         <p>+1,000 WEB STORE BONUS COINS!</p>
                         <p class="price">₱2,950.00</p>
-                        <a href="product-details.html#15,500-coins" class="more-details">More Details</a>
+                        <a href="product9.html" class="more-details">More Details</a>
                         <button class="add-to-cart">Buy</button>
                     </div>
                 </div>
@@ -135,6 +135,6 @@
             </div>
         </div>
     </main>
-    <script src="products.js"></script>
+    <script src="MAIN-PROUDCT.js"></script>
 </body>
 </html>
