--- a/FINALS/product1.html
+++ b/FINALS/product1.html
@@ -41,7 +41,7 @@
                 <p>x1 GO Fest 2024 Tee (Gray)</p>
             </div>
             <p class="price">₱439.10</p>
-            <button class="buy-now">Buy Now</button>
+            <button class="add-to-cart">Add to Cart</button>
         </div>
     </main>
 </body>
