--- a/FINALS/product3.html
+++ b/FINALS/product3.html
@@ -41,7 +41,7 @@
             <p>x3 Remote Raid Pass</p>
         </div>
         <p class="price">₱149.00</p>
-        <button class="buy-now">Buy Now</button>
+        <button class="add-to-cart">Add to Cart</button>
     </div>
     </main>
 </body>
