--- a/FINALS/product6.html
+++ b/FINALS/product6.html
@@ -33,7 +33,7 @@
             <p>+100 WEB STORE BONUS COINS!</p>
         </div>
         <p class="price">₱289.00</p>
-        <button class="buy-now">Buy Now</button>
+        <button class="add-to-cart">Add to Cart</button>
     </div>
     </main>
 </body>
