--- a/FINALS/MAIN-PRODUCT-PAGE.html
+++ b/FINALS/MAIN-PRODUCT-PAGE.html
@@ -35,7 +35,7 @@
                         <p>Ticket and Additional Items!</p>
                         <p class="price">₱439.10</p>
                         <a href="product1.html" class="more-details">More Details</a>
-                        <button class="add-to-cart">Buy</button>
+                        <button class="add-to-cart">Add to Cart</button>
                     </div>
                 </div>
                 <div class="product-item">
@@ -45,7 +45,7 @@
                         <p>Limited Time Offer with Additional Items!</p>
                         <p class="price">₱149.00</p>
                         <a href="product2.html" class="more-details">More Details</a>
-                        <button class="add-to-cart">Buy</button>
+                        <button class="add-to-cart">Add to Cart</button>
                     </div>
                 </div>
                 <div class="product-item">
@@ -55,7 +55,7 @@
                         <p>Limited Time Offer with Additional Items!</p>
                         <p class="price">₱149.00</p>
                         <a href="product3.html" class="more-details">More Details</a>
-                        <button class="add-to-cart">Buy</button>
+                        <button class="add-to-cart">Add to Cart</button>
                     </div>
                 </div>
                 <div class="product-item">
@@ -65,7 +65,7 @@
                         <p>3 Daily Bundles</p>
                         <p class="price">₱???</p>
                         <a href="product4.html" class="more-details">More Details</a>
-                        <button class="add-to-cart">Buy</button>
+                        <button class="add-to-cart">Add to Cart</button>
                     </div>
                 </div>
             </div>
@@ -85,7 +85,7 @@
                         <p>+50 WEB STORE BONUS COINS!</p>
                         <p class="price">₱149.00</p>
                         <a href="product5.html" class="more-details">More Details</a>
-                        <button class="add-to-cart">Buy</button>
+                        <button class="add-to-cart">Add to Cart</button>
                     </div>
                 </div>
                 <div class="product-item">
@@ -95,7 +95,7 @@
                         <p>+100 WEB STORE BONUS COINS!</p>
                         <p class="price">₱289.00</p>
                         <a href="product6.html" class="more-details">More Details</a>
-                        <button class="add-to-cart">Buy</button>
+                        <button class="add-to-cart">Add to Cart</button>
                     </div>
                 </div>
                 <div class="product-item">
@@ -105,7 +105,7 @@
                         <p>+200 WEB STORE BONUS COINS!</p>
                         <p class="price">₱589.00</p>
                         <a href="product7.html" class="more-details">More Details</a>
-                        <button class="add-to-cart">Buy</button>
+                        <button class="add-to-cart">Add to Cart</button>
                     </div>
                 </div>
                 <div class="product-item">
@@ -115,7 +115,7 @@
                         <p>+400 WEB STORE BONUS COINS!</p>
                         <p class="price">₱1,170.00</p>
                         <a href="product8.html" class="more-details">More Details</a>
-                        <button class="add-to-cart">Buy</button>
+                        <button class="add-to-cart">Add to Cart</button>
                     </div>
                 </div>
                 <div class="product-item">
@@ -125,7 +125,7 @@
                         <p>+1,000 WEB STORE BONUS COINS!</p>
                         <p class="price">₱2,950.00</p>
                         <a href="product9.html" class="more-details">More Details</a>
-                        <button class="add-to-cart">Buy</button>
+                        <button class="add-to-cart">Add to Cart</button>
                     </div>
                 </div>
             </div>
