--- a/FINALS/product2.html
+++ b/FINALS/product2.html
@@ -37,7 +37,7 @@
                 <p>x1 Ticket</p>
             </div>
             <p class="price">₱149.00</p>
-            <button class="buy-now">Buy Now</button>
+            <button class="add-to-cart">Add to Cart</button>
         </div>
     </main>
 </body>
