--- a/FINALS/product4.html
+++ b/FINALS/product4.html
@@ -30,7 +30,7 @@
         <img src="images/mysterybox.webp" alt="Mystery Boxes">
         <h3>Mystery Boxes</h3>
         <p class="price">₱???</p>
-        <button class="buy-now">Buy Now</button>
+        <button class="add-to-cart">Add to Cart</button>
     </div>
     </main>
 </body>
