--- a/FINALS/product9.html
+++ b/FINALS/product9.html
@@ -33,7 +33,7 @@
             <p>+1,000 WEB STORE BONUS COINS!</p>
         </div>
         <p class="price">₱2,950.00</p>
-        <button class="add-to-cart">Add to Cart</button>
+        <a href="CART.html" button class="add-to-cart">Add to Cart</button>
     </div>
     </main>
 </body>
