--- a/FINALS/CART.html
+++ b/FINALS/CART.html
@@ -29,6 +29,10 @@
         <div class="cart-items-container" id="cart-items-container">
 
         </div>
+        <div class="cart-total">
+            Total: ₱0.00
+        </div>
+        <a href="#" class="checkout-button">Purchase</a>
     </main>
     <script src=""></script>
 </body>
